cmake_minimum_required (VERSION 2.6)
project (lpx)
#add_executable(lpx src/main.c src/bus.c src/bus.h src/libusb_debug_print.c src/lpxstd.h src/webcam.c src/webcam.h src/lpxstd.c src/libusb_debug_print.h src/stream_storage.c src/stream_storage.h src/stream.h src/list.c src/list.h src/main2.c)
add_executable(lpx2 src/main2.c src/list.h src/list.c src/lpxstd.h src/lpxstd.c src/stream_storage.h src/stream_storage.c)
#target_link_libraries(lpx usb-1.0 curl)
set(CMAKE_BUILD_TYPE Debug)